--- a/styles/throw_fetch.css
+++ b/styles/throw_fetch.css
@@ -98,11 +98,19 @@ body {
   position:absolute;
   height:30%;
   width:4%;
-  top:30%;
+  top:33%;
   background-color: black;
-  left:25%;
+  left:32%;
+  transform-origin: 0 0;
   transform:rotate(25deg);
-  border-radius:40%
+  border-radius:40%;
+  animation: handMove 1s 3s;
+}
+
+@keyframes handMove {
+  50% {
+    transform: rotate(-25deg);
+  }
 }
 
 .human-left-hand {
@@ -120,11 +128,23 @@ body {
   position: absolute;
   width:2%;
   height:3%;
-  border-radius: 50%;
-  top:83%;
   left:3%;
+  top:83%;
+  border-radius: 50%;
   border: 2px solid black;
   background-color: yellow;
+  animation: ballFlow 3s 3s both ;
+  
+}
+
+@keyframes ballFlow {
+  50% {
+    top:50%;
+  }
+  100% {
+    left:93%;
+    top:90%;
+  }
 }
 
 .dog {
@@ -133,7 +153,17 @@ body {
   height:20%;
   bottom:0%;
   left:12%;
+  transform:scaleX(1);
+  animation: dogTurn 0.3s 4s both;
+  
 }
+
+@keyframes dogTurn {
+  100% {
+    transform: translateX(-90px) scaleX(-1);
+  }
+}
+
 
 .dog-head {
   position:absolute;
@@ -210,9 +240,28 @@ body {
   position:absolute;
   height:7%;
   width:12%;
-  top:26%;
-  left:40%;
+  top:30%;
+  left:41%;
   background-color: black;
   border-radius:10% 10% 95% 10%;
-  transform: rotate(-25deg);
+  transform-origin:0 0;
+  transform: rotate(-25deg) ;
+  animation: tailWag 1s infinite;
+}
+
+@keyframes tailWag {
+  10% {
+    transform:rotate(-15deg);
+  }
+  40% {
+    transform:rotate(-25deg);
+  }
+  80% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform:rotate(-25deg);
+  }
+
+ 
 }
